--- a/MyFavoritePlaces/app/src/main/res/values/strings.xml
+++ b/MyFavoritePlaces/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-<string name="app_name">"My Favorite Places "</string>
-<string name="action_settings">Settings</string>
-<string name="nom_place"></string>
-<string name="address_place"></string>
-<string name="description_place"></string>
-<string name="add_type">Add Type</string>
-<string name="delete_type">Delete Type</string>
-<string name="save">Save</string>
-<string name="cancel">Cancel</string>
-<string name="tapez_type">Entrer type : </string>
+    <string name="app_name">"My Favorite Places"</string>
+    <string name="action_settings">Paramètres</string>
+    <string name="nom_place"></string>
+    <string name="address_place"></string>
+    <string name="description_place"></string>
+    <string name="add_type">Ajouter type</string>
+    <string name="delete_type">Supprimer Type</string>
+    <string name="save">Sauvegarder</string>
+    <string name="cancel">Annuler</string>
+    <string name="tapez_type">Entrer type : </string>
 </resources>
